# projetoreserva

./: pyproject.toml
reserva_app/: app.py
templates/: base.html  principal.html
