[tool.poetry]
name = "reserva-app"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto <alberto.carlos@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
